[gd_scene load_steps=17 format=2]

[ext_resource path="res://content/meshes/LowCube.obj" type="ArrayMesh" id=1]
[ext_resource path="res://vr/FakeVRHead.gd" type="Script" id=2]
[ext_resource path="res://vr/VRPlayer.gd" type="Script" id=3]
[ext_resource path="res://vr/Pointer.gd" type="Script" id=4]

[sub_resource type="Shader" id=83]
code = "shader_type spatial;
render_mode blend_mix,cull_back,diffuse_burley,specular_disabled,unshaded;
uniform vec4 notecolor : hint_color = vec4(1,1,1,1);

uniform float alpha_multi = 1;
uniform float fade = 1;

uniform bool use_image = false;
uniform sampler2D image;


void fragment() {
	vec2 base_uv = UV;
	vec4 img = vec4(1.0);
	if (use_image) {
		img = texture(image,UV);
	}
	ALBEDO = notecolor.rgb * img.rgb;
//	ALBEDO.r = 1.0 - fade;
//	ALBEDO.b = 0.0;
//	ALBEDO.g = fade;
	ALPHA = notecolor.a*img.a*alpha_multi*fade;
}
"

[sub_resource type="ShaderMaterial" id=84]
render_priority = 2
shader = SubResource( 83 )
shader_param/notecolor = Color( 1, 1, 1, 1 )
shader_param/alpha_multi = 1.0
shader_param/fade = 1.0
shader_param/use_image = false

[sub_resource type="ArrayMesh" id=85]
surfaces/0 = {
"aabb": AABB( -1.19977, -1.19977, -1.18017, 2.39954, 2.39954, 2.37994 ),
"array_data": PoolByteArray( 200, 19, 44, 63, 12, 146, 153, 191, 65, 134, 44, 191, 34, 148, 106, 73, 85, 53, 85, 55, 65, 134, 44, 191, 12, 146, 153, 191, 200, 19, 44, 191, 222, 148, 103, 53, 85, 49, 85, 55, 65, 134, 44, 63, 12, 146, 153, 191, 200, 19, 44, 63, 17, 164, 107, 74, 85, 53, 170, 52, 200, 19, 44, 191, 12, 146, 153, 191, 65, 134, 44, 63, 239, 164, 105, 54, 85, 49, 170, 52, 12, 146, 153, 191, 200, 19, 44, 63, 65, 134, 44, 63, 164, 17, 20, 117, 170, 56, 170, 59, 12, 146, 153, 191, 65, 134, 44, 191, 200, 19, 44, 63, 164, 239, 233, 117, 170, 54, 170, 59, 12, 146, 153, 191, 65, 134, 44, 63, 200, 19, 44, 191, 148, 34, 23, 117, 170, 56, 85, 58, 12, 146, 153, 191, 200, 19, 44, 191, 65, 134, 44, 191, 148, 222, 236, 117, 170, 54, 85, 58, 65, 134, 44, 63, 200, 19, 44, 63, 12, 146, 153, 63, 17, 17, 234, 124, 170, 56, 170, 50, 200, 19, 44, 63, 65, 134, 44, 191, 12, 146, 153, 63, 17, 239, 2, 116, 170, 54, 170, 50, 200, 19, 44, 191, 65, 134, 44, 63, 12, 146, 153, 63, 239, 17, 234, 125, 170, 56, 86, 41, 65, 134, 44, 191, 200, 19, 44, 191, 12, 146, 153, 63, 239, 239, 254, 116, 170, 54, 86, 41, 200, 19, 44, 191, 12, 146, 153, 63, 65, 134, 44, 191, 222, 108, 151, 54, 170, 58, 85, 55, 65, 134, 44, 63, 12, 146, 153, 63, 200, 19, 44, 191, 34, 108, 149, 74, 85, 57, 85, 55, 65, 134, 44, 191, 12, 146, 153, 63, 200, 19, 44, 63, 239, 92, 153, 53, 170, 58, 170, 52, 200, 19, 44, 63, 12, 146, 153, 63, 65, 134, 44, 63, 17, 92, 150, 73, 85, 57, 170, 52, 12, 146, 153, 63, 200, 19, 44, 63, 65, 134, 44, 191, 108, 34, 238, 116, 170, 56, 85, 55, 12, 146, 153, 63, 65, 134, 44, 191, 200, 19, 44, 191, 108, 222, 19, 116, 170, 54, 85, 55, 12, 146, 153, 63, 65, 134, 44, 63, 200, 19, 44, 63, 92, 17, 237, 116, 170, 56, 170, 52, 12, 146, 153, 63, 200, 19, 44, 191, 65, 134, 44, 63, 92, 239, 18, 116, 170, 54, 170, 52, 65, 28, 57, 63, 170, 251, 128, 63, 15, 255, 135, 191, 70, 112, 251, 94, 0, 57, 85, 56, 87, 221, 56, 63, 158, 155, 59, 63, 178, 15, 151, 191, 109, 109, 254, 116, 170, 56, 85, 56, 199, 155, 111, 63, 163, 55, 118, 63, 239, 145, 129, 191, 84, 84, 208, 95, 243, 56, 0, 56, 170, 251, 128, 63, 65, 28, 57, 63, 15, 255, 135, 191, 112, 70, 244, 114, 170, 56, 0, 56, 170, 251, 128, 63, 15, 255, 135, 63, 65, 28, 57, 191, 70, 70, 193, 95, 0, 57, 85, 55, 65, 28, 57, 63, 170, 251, 128, 63, 15, 255, 135, 191, 70, 112, 143, 76, 85, 57, 0, 56, 65, 28, 57, 63, 15, 255, 135, 191, 170, 251, 128, 191, 70, 144, 101, 72, 85, 53, 0, 56, 199, 155, 111, 63, 239, 145, 129, 191, 163, 55, 118, 191, 84, 172, 62, 101, 0, 54, 231, 55, 170, 251, 128, 63, 15, 255, 135, 191, 65, 28, 57, 191, 70, 186, 63, 95, 0, 54, 85, 55, 170, 251, 128, 63, 65, 28, 57, 191, 15, 255, 135, 191, 112, 186, 25, 117, 170, 54, 0, 56, 158, 155, 59, 63, 87, 221, 56, 191, 178, 15, 151, 191, 109, 147, 22, 124, 170, 54, 85, 56, 65, 28, 57, 63, 15, 255, 135, 191, 170, 251, 128, 191, 70, 144, 65, 123, 0, 54, 85, 56, 15, 255, 135, 63, 170, 251, 128, 63, 65, 28, 57, 63, 56, 56, 193, 95, 0, 57, 170, 52, 238, 145, 129, 63, 163, 55, 118, 63, 199, 155, 111, 63, 42, 42, 194, 101, 0, 57, 24, 52, 15, 255, 135, 63, 65, 28, 57, 63, 170, 251, 128, 63, 56, 14, 231, 117, 170, 56, 0, 52, 65, 28, 57, 63, 15, 255, 135, 63, 170, 251, 128, 63, 14, 56, 155, 72, 85, 57, 0, 52, 65, 28, 57, 63, 15, 255, 135, 63, 170, 251, 128, 63, 14, 56, 191, 123, 0, 57, 170, 50, 15, 255, 135, 63, 65, 28, 57, 191, 170, 251, 128, 63, 56, 242, 12, 114, 170, 54, 0, 52, 239, 145, 129, 63, 199, 155, 111, 191, 163, 55, 118, 63, 42, 214, 48, 95, 24, 54, 0, 52, 15, 255, 135, 63, 170, 251, 128, 191, 65, 28, 57, 63, 56, 200, 63, 95, 0, 54, 170, 52, 65, 28, 57, 63, 170, 251, 128, 191, 15, 255, 135, 63, 14, 200, 5, 94, 0, 54, 170, 50, 65, 28, 57, 63, 170, 251, 128, 191, 15, 255, 135, 63, 14, 200, 113, 76, 85, 53, 0, 52, 170, 251, 128, 191, 65, 28, 57, 63, 15, 255, 135, 191, 144, 70, 19, 113, 170, 56, 0, 58, 159, 46, 60, 191, 233, 86, 56, 63, 136, 8, 151, 191, 147, 109, 2, 116, 170, 56, 170, 57, 163, 55, 118, 191, 199, 155, 111, 63, 239, 145, 129, 191, 172, 84, 23, 95, 219, 56, 0, 58, 65, 28, 57, 191, 170, 251, 128, 63, 15, 255, 135, 191, 186, 112, 5, 94, 0, 57, 170, 57, 15, 255, 135, 191, 170, 251, 128, 63, 65, 28, 57, 191, 186, 70, 59, 94, 0, 57, 85, 58, 163, 55, 118, 191, 199, 155, 111, 63, 239, 145, 129, 191, 172, 84, 55, 95, 0, 57, 36, 58, 65, 28, 57, 191, 170, 251, 128, 63, 15, 255, 135, 191, 186, 112, 156, 57, 170, 58, 0, 56, 163, 55, 118, 191, 199, 155, 111, 63, 239, 145, 129, 191, 172, 84, 193, 43, 219, 58, 0, 56, 15, 255, 135, 191, 170, 251, 128, 63, 65, 28, 57, 191, 186, 70, 195, 33, 0, 59, 85, 55, 15, 255, 135, 191, 65, 28, 57, 191, 170, 251, 128, 191, 144, 186, 231, 124, 170, 54, 0, 58, 239, 145, 129, 191, 199, 155, 111, 191, 163, 55, 118, 191, 172, 172, 193, 107, 72, 54, 0, 58, 15, 255, 135, 191, 170, 251, 128, 191, 65, 28, 57, 191, 186, 186, 191, 97, 0, 54, 85, 58, 65, 28, 57, 191, 170, 251, 128, 191, 15, 255, 135, 191, 186, 144, 191, 123, 0, 54, 170, 57, 233, 86, 56, 191, 159, 46, 60, 191, 136, 8, 151, 191, 147, 147, 22, 125, 170, 54, 170, 57, 239, 145, 129, 191, 199, 155, 111, 191, 163, 55, 118, 191, 172, 172, 193, 123, 0, 54, 219, 57, 15, 255, 135, 191, 170, 251, 128, 191, 65, 28, 57, 191, 186, 186, 67, 30, 0, 48, 85, 55, 239, 145, 129, 191, 199, 155, 111, 191, 163, 55, 118, 191, 172, 172, 71, 30, 0, 48, 183, 55, 65, 28, 57, 191, 170, 251, 128, 191, 15, 255, 135, 191, 186, 144, 95, 49, 85, 49, 0, 56, 15, 255, 135, 191, 65, 28, 57, 63, 170, 251, 128, 63, 200, 14, 24, 120, 170, 56, 0, 60, 239, 145, 129, 191, 199, 155, 111, 63, 163, 55, 118, 63, 214, 42, 63, 107, 219, 56, 0, 60, 15, 255, 135, 191, 170, 251, 128, 63, 65, 28, 57, 63, 200, 56, 65, 97, 0, 57, 170, 59, 65, 28, 57, 191, 170, 251, 128, 63, 15, 255, 135, 63, 242, 56, 65, 123, 0, 57, 86, 41, 239, 145, 129, 191, 199, 155, 111, 63, 163, 55, 118, 63, 214, 42, 63, 123, 0, 57, 131, 36, 15, 255, 135, 191, 65, 28, 57, 63, 170, 251, 128, 63, 200, 14, 225, 124, 170, 56, 0, 0, 15, 255, 135, 191, 170, 251, 128, 63, 65, 28, 57, 63, 200, 56, 189, 30, 0, 59, 170, 52, 239, 145, 129, 191, 199, 155, 111, 63, 163, 55, 118, 63, 214, 42, 185, 30, 0, 59, 72, 52, 65, 28, 57, 191, 170, 251, 128, 63, 15, 255, 135, 63, 242, 56, 161, 49, 170, 58, 0, 52, 65, 28, 57, 191, 15, 255, 135, 191, 170, 251, 128, 63, 242, 200, 100, 57, 85, 49, 0, 52, 199, 155, 111, 191, 239, 145, 129, 191, 163, 55, 118, 63, 214, 214, 63, 43, 144, 48, 0, 52, 170, 251, 128, 191, 15, 255, 135, 191, 65, 28, 57, 63, 200, 200, 61, 33, 0, 48, 170, 52, 170, 251, 128, 191, 65, 28, 57, 191, 15, 255, 135, 63, 200, 242, 244, 114, 170, 54, 0, 0, 199, 155, 111, 191, 239, 145, 129, 191, 163, 55, 118, 63, 214, 214, 233, 95, 72, 54, 0, 0, 65, 28, 57, 191, 15, 255, 135, 191, 170, 251, 128, 63, 242, 200, 251, 94, 0, 54, 86, 41, 170, 251, 128, 191, 15, 255, 135, 191, 65, 28, 57, 63, 200, 200, 197, 94, 0, 54, 170, 59, 199, 155, 111, 191, 239, 145, 129, 191, 163, 55, 118, 63, 214, 214, 201, 95, 0, 54, 219, 59, 170, 251, 128, 191, 65, 28, 57, 191, 15, 255, 135, 63, 200, 242, 225, 113, 170, 54, 0, 60 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 2, 0, 3, 0, 1, 0, 4, 0, 6, 0, 5, 0, 6, 0, 7, 0, 5, 0, 8, 0, 10, 0, 9, 0, 10, 0, 11, 0, 9, 0, 12, 0, 14, 0, 13, 0, 14, 0, 15, 0, 13, 0, 16, 0, 18, 0, 17, 0, 18, 0, 19, 0, 17, 0, 20, 0, 22, 0, 21, 0, 22, 0, 23, 0, 21, 0, 24, 0, 22, 0, 13, 0, 22, 0, 25, 0, 13, 0, 23, 0, 22, 0, 16, 0, 22, 0, 24, 0, 16, 0, 26, 0, 27, 0, 0, 0, 27, 0, 28, 0, 0, 0, 29, 0, 27, 0, 30, 0, 27, 0, 31, 0, 30, 0, 28, 0, 27, 0, 17, 0, 27, 0, 29, 0, 17, 0, 32, 0, 33, 0, 18, 0, 33, 0, 34, 0, 18, 0, 35, 0, 33, 0, 15, 0, 33, 0, 32, 0, 15, 0, 34, 0, 33, 0, 8, 0, 33, 0, 36, 0, 8, 0, 37, 0, 38, 0, 19, 0, 38, 0, 39, 0, 19, 0, 40, 0, 38, 0, 9, 0, 38, 0, 37, 0, 9, 0, 39, 0, 38, 0, 2, 0, 38, 0, 41, 0, 2, 0, 42, 0, 44, 0, 43, 0, 44, 0, 45, 0, 43, 0, 46, 0, 47, 0, 6, 0, 47, 0, 42, 0, 6, 0, 48, 0, 49, 0, 12, 0, 49, 0, 50, 0, 12, 0, 51, 0, 52, 0, 7, 0, 52, 0, 53, 0, 7, 0, 54, 0, 56, 0, 55, 0, 56, 0, 51, 0, 55, 0, 57, 0, 58, 0, 1, 0, 58, 0, 59, 0, 1, 0, 60, 0, 61, 0, 4, 0, 61, 0, 62, 0, 4, 0, 63, 0, 64, 0, 10, 0, 64, 0, 65, 0, 10, 0, 66, 0, 67, 0, 14, 0, 67, 0, 68, 0, 14, 0, 69, 0, 70, 0, 3, 0, 70, 0, 71, 0, 3, 0, 72, 0, 73, 0, 11, 0, 73, 0, 74, 0, 11, 0, 75, 0, 76, 0, 5, 0, 76, 0, 77, 0, 5, 0, 3, 0, 71, 0, 1, 0, 71, 0, 57, 0, 1, 0, 75, 0, 5, 0, 53, 0, 5, 0, 7, 0, 53, 0, 1, 0, 59, 0, 0, 0, 59, 0, 26, 0, 0, 0, 54, 0, 55, 0, 31, 0, 55, 0, 30, 0, 31, 0, 17, 0, 29, 0, 16, 0, 29, 0, 23, 0, 16, 0, 29, 0, 30, 0, 23, 0, 30, 0, 21, 0, 23, 0, 10, 0, 65, 0, 11, 0, 65, 0, 72, 0, 11, 0, 60, 0, 4, 0, 77, 0, 4, 0, 5, 0, 77, 0, 9, 0, 37, 0, 8, 0, 37, 0, 34, 0, 8, 0, 37, 0, 19, 0, 34, 0, 19, 0, 18, 0, 34, 0, 55, 0, 51, 0, 43, 0, 51, 0, 42, 0, 43, 0, 51, 0, 7, 0, 42, 0, 7, 0, 6, 0, 42, 0, 14, 0, 68, 0, 15, 0, 68, 0, 35, 0, 15, 0, 63, 0, 10, 0, 36, 0, 10, 0, 8, 0, 36, 0, 15, 0, 32, 0, 13, 0, 32, 0, 24, 0, 13, 0, 32, 0, 18, 0, 24, 0, 18, 0, 16, 0, 24, 0, 2, 0, 41, 0, 3, 0, 41, 0, 69, 0, 3, 0, 40, 0, 9, 0, 74, 0, 9, 0, 11, 0, 74, 0, 12, 0, 50, 0, 14, 0, 50, 0, 66, 0, 14, 0, 46, 0, 6, 0, 62, 0, 6, 0, 4, 0, 62, 0, 13, 0, 25, 0, 12, 0, 25, 0, 48, 0, 12, 0, 20, 0, 21, 0, 45, 0, 21, 0, 43, 0, 45, 0, 0, 0, 28, 0, 2, 0, 28, 0, 39, 0, 2, 0, 28, 0, 17, 0, 39, 0, 17, 0, 19, 0, 39, 0, 43, 0, 21, 0, 55, 0, 21, 0, 30, 0, 55, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 324,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 78
}

[sub_resource type="SpatialMaterial" id=86]
flags_unshaded = true
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=87]
flags_transparent = true
flags_unshaded = true
flags_vertex_lighting = true
vertex_color_use_as_albedo = true
albedo_color = Color( 1, 1, 1, 0.196078 )

[sub_resource type="Gradient" id=88]
colors = PoolColorArray( 1, 1, 1, 0.0196078, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=72]
gradient = SubResource( 88 )

[sub_resource type="Curve" id=89]
max_value = 0.05
_data = [ Vector2( 0, 0.05 ), 0.0, -0.0070298, 0, 0, Vector2( 1, 0 ), -0.129338, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=79]
curve = SubResource( 89 )

[sub_resource type="ParticlesMaterial" id=90]
gravity = Vector3( 0, 0, 0 )
scale_curve = SubResource( 79 )
color_ramp = SubResource( 72 )

[sub_resource type="CylinderMesh" id=91]
top_radius = 0.003
bottom_radius = 0.01
height = 0.5
radial_segments = 10
rings = 0

[sub_resource type="SpatialMaterial" id=92]
flags_transparent = true
flags_unshaded = true
flags_vertex_lighting = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
albedo_color = Color( 0, 1, 1, 0.627451 )

[node name="VRPlayer" type="Spatial"]
script = ExtResource( 3 )

[node name="Origin" type="ARVROrigin" parent="."]
world_scale = 2.0

[node name="Head" type="ARVRCamera" parent="Origin"]
fov = 83.1628

[node name="LeftHand" type="ARVRController" parent="Origin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, -1, 0 )

[node name="Mesh" type="MeshInstance" parent="Origin/LeftHand"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, -0.5 )
mesh = ExtResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 84 )

[node name="Outline" type="MeshInstance" parent="Origin/LeftHand/Mesh"]
mesh = SubResource( 85 )
material/0 = SubResource( 86 )

[node name="HandTrail" type="Particles" parent="Origin/LeftHand/Mesh"]
visible = false
material_override = SubResource( 87 )
amount = 500
lifetime = 0.25
local_coords = false
process_material = SubResource( 90 )
draw_pass_1 = ExtResource( 1 )

[node name="Ray" type="RayCast" parent="Origin/LeftHand"]
cast_to = Vector3( 0, 0, -36 )
collide_with_areas = true
debug_shape_custom_color = Color( 0.490196, 0.388235, 0.337255, 0.0980392 )
debug_shape_thickness = 3
script = ExtResource( 4 )

[node name="Beam" type="MeshInstance" parent="Origin/LeftHand/Ray"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.25 )
visible = false
cast_shadow = 0
generate_lightmap = false
mesh = SubResource( 91 )
material/0 = SubResource( 92 )

[node name="RightHand" type="ARVRController" parent="Origin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, -1, 0 )
controller_id = 2

[node name="Mesh" type="MeshInstance" parent="Origin/RightHand"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, -0.5 )
mesh = ExtResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 84 )

[node name="Outline" type="MeshInstance" parent="Origin/RightHand/Mesh"]
mesh = SubResource( 85 )
material/0 = SubResource( 86 )

[node name="HandTrail" type="Particles" parent="Origin/RightHand/Mesh"]
visible = false
material_override = SubResource( 87 )
amount = 500
lifetime = 0.25
local_coords = false
process_material = SubResource( 90 )
draw_pass_1 = ExtResource( 1 )

[node name="Ray" type="RayCast" parent="Origin/RightHand"]
cast_to = Vector3( 0, 0, -36 )
collide_with_areas = true
debug_shape_custom_color = Color( 0.572549, 0.87451, 1, 0.392157 )
debug_shape_thickness = 3
script = ExtResource( 4 )

[node name="Beam" type="MeshInstance" parent="Origin/RightHand/Ray"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.25 )
visible = false
cast_shadow = 0
generate_lightmap = false
mesh = SubResource( 91 )
material/0 = SubResource( 92 )

[node name="FakeOrigin" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
visible = false

[node name="Head" type="Camera" parent="FakeOrigin"]
script = ExtResource( 2 )

[node name="LeftHand" type="Position3D" parent="FakeOrigin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, -0.5, -1 )

[node name="Mesh" type="MeshInstance" parent="FakeOrigin/LeftHand"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = ExtResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 84 )

[node name="Outline" type="MeshInstance" parent="FakeOrigin/LeftHand/Mesh"]
mesh = SubResource( 85 )
material/0 = SubResource( 86 )

[node name="HandTrail" type="Particles" parent="FakeOrigin/LeftHand/Mesh"]
visible = false
material_override = SubResource( 87 )
amount = 500
lifetime = 0.25
local_coords = false
process_material = SubResource( 90 )
draw_pass_1 = ExtResource( 1 )

[node name="Ray" type="RayCast" parent="FakeOrigin/LeftHand"]
cast_to = Vector3( 0, 0, -36 )
collide_with_areas = true
debug_shape_custom_color = Color( 0.490196, 0.388235, 0.337255, 0.0980392 )
debug_shape_thickness = 3
script = ExtResource( 4 )

[node name="Beam" type="MeshInstance" parent="FakeOrigin/LeftHand/Ray"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.25 )
visible = false
cast_shadow = 0
generate_lightmap = false
mesh = SubResource( 91 )
material/0 = SubResource( 92 )

[node name="RightHand" type="Position3D" parent="FakeOrigin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, -0.5, -1 )

[node name="Mesh" type="MeshInstance" parent="FakeOrigin/RightHand"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = ExtResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 84 )

[node name="Outline" type="MeshInstance" parent="FakeOrigin/RightHand/Mesh"]
mesh = SubResource( 85 )
material/0 = SubResource( 86 )

[node name="HandTrail" type="Particles" parent="FakeOrigin/RightHand/Mesh"]
visible = false
material_override = SubResource( 87 )
amount = 500
lifetime = 0.25
local_coords = false
process_material = SubResource( 90 )
draw_pass_1 = ExtResource( 1 )

[node name="Ray" type="RayCast" parent="FakeOrigin/RightHand"]
cast_to = Vector3( 0, 0, -36 )
collide_with_areas = true
debug_shape_custom_color = Color( 0.572549, 0.87451, 1, 0.392157 )
debug_shape_thickness = 3
script = ExtResource( 4 )

[node name="Beam" type="MeshInstance" parent="FakeOrigin/RightHand/Ray"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.25 )
visible = false
cast_shadow = 0
generate_lightmap = false
mesh = SubResource( 91 )
material/0 = SubResource( 92 )
